infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nopollops-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: nopollops-demo
